# GOMC

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT.txt  Change log  GOMC_Config.h.in  License.txt  README  README.md  azure-pipelines.yml  cuda-memcheck-script.sh  downloadFindFFTW.cmake.in  makefile  metamake.sh  metamakeMPI.sh  metamakeMPIDebug.sh  output.txt  sdscCompile.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ccpp.yml
CMake/: FileLists.cmake  FindBoost.cmake  GOMCCPUSetup.cmake  GOMCCUDASetup.cmake  GOMCMPI.cmake  GOMCManageMPI.cmake  GOMCOptionUtilities.cmake  GOMCTestMPI_IN_PLACE.cmake  TestMPI.cpp  TestWinProcNum.cpp  ThreadMPI.cmake
CMake/boost/: CMakeLists.txt.in
Examples/: in.dat.template
dockerfiles/: GOMC_CPU.dockerfile
example/: SPCE_merged.psf  in.conf  water_mie.par
example_file/methane_butane/: in.conf  setup_box_0.psf  setup_box_1.psf
example_file/methane_pentane/: GOMC_CPU_GCMC  in.conf  setup_box_0.psf  setup_box_1.psf
example_file/perfluorobutane_butane/: in.conf  par_mie.inp  setup_box_0.psf  setup_box_1.psf
lib/: AlphaNum.cpp  AlphaNum.h  BCC.cpp  BCC.h  BasicTypes.h  BasicTypes.h.orig  BitLib.h  BitLib.h.orig  CircuitFinder.cpp  CircuitFinder.h  Endian.h  FloydWarshallCycle.cpp  FloydWarshallCycle.h  GeomLib.h  GeomLib.h.orig  Lambda.h  NumLib.h  NumLib.h.orig  StrLib.h  StrLib.h.orig  StrStrmLib.h  StrStrmLib.h.orig  VectorLib.h  VectorLib.h.orig
lib/DCDParser/: dcdplugin.c  dcdplugin.cpp  dcdplugin.h  largefiles.h
lib/Random123/: boxmuller.hpp
lib/libpme6/: LICENSE  abort_unless.h  cube.cpp  cube.h  dispersive.cpp  energies.h  linear-algebra.cpp  linear-algebra.h  make-box.cpp  pme.cpp  pme.h  run-pme.cpp  spline.cpp  spline.h
scripts/: get_cuda_full_version.py  get_cuda_version.py
src/: #CalculateEnergy.cpp#  #FFSwitchMartini.h#  BlockOutput.cpp  BlockOutput.cpp.orig  BlockOutput.h  BlockOutput.h.orig  BondAdjacencyList.cpp  BondAdjacencyList.h  BoxDimensions.cpp  BoxDimensions.cpp.orig  BoxDimensions.h  BoxDimensions.h.orig  BoxDimensionsNonOrth.cpp  BoxDimensionsNonOrth.cpp.orig  BoxDimensionsNonOrth.h  BoxDimensionsNonOrth.h.orig  CBMC.cpp  CBMC.cpp.orig  CBMC.h  CBMC.h.orig  CFCMC.h  CMakeLists.txt  COM.h  COM.h.orig  CPUSide.cpp  CPUSide.cpp.orig  CPUSide.h  CPUSide.h.orig  CalculateEnergy.cpp  CalculateEnergy.cpp.orig  CalculateEnergy.h  CalculateEnergy.h.orig  CellList.cpp  CellList.cpp.orig  CellList.h  CellList.h.orig  Checkpoint.cpp  Checkpoint.h  CheckpointOutput.cpp  CheckpointOutput.h  (+246 more)
src/GPU/: CUDAMemoryManager.cu  CUDAMemoryManager.cuh  CUDAMemoryManager.h  CalculateEnergyCUDAKernel.cpp  CalculateEnergyCUDAKernel.cu  CalculateEnergyCUDAKernel.cu.orig  CalculateEnergyCUDAKernel.cuh  CalculateEnergyCUDAKernel.cuh.orig  CalculateEnergyCUDAKernel.h  CalculateEwaldCUDAKernel.cu  CalculateEwaldCUDAKernel.cu.orig  CalculateEwaldCUDAKernel.cuh  CalculateEwaldCUDAKernel.cuh.orig  CalculateEwaldCUDAKernel.h  CalculateForceCUDAKernel.cu  CalculateForceCUDAKernel.cu.orig  CalculateForceCUDAKernel.cuh  CalculateForceCUDAKernel.cuh.orig  CalculateForceCUDAKernel.h  CalculateMinImageCUDA.h  CalculateMinImageCUDAKernel.cuh  CalculateMinImageCUDAKernel.cuh.orig  CalculateMinImageCUDAKernel.h  CellListGPU.cu  CellListGPU.cuh  ConstantDefinitionsCUDA.h  ConstantDefinitionsCUDAKernel.cu  ConstantDefinitionsCUDAKernel.cu.orig  ConstantDefinitionsCUDAKernel.cuh  ConstantDefinitionsCUDAKernel.cuh.orig  ConstantDefinitionsCUDAKernel.h  TransformParticlesCUDAKernel.cu  TransformParticlesCUDAKernel.cuh  VariablesCUDA.cuh  VariablesCUDA.cuh.orig
src/cbmc/: DCComponent.h  DCComponent.h.orig  DCCrankShaftAng.cpp  DCCrankShaftAng.h  DCCrankShaftDih.cpp  DCCrankShaftDih.h  DCCyclic.cpp  DCCyclic.h  DCData.h  DCData.h.orig  DCDiatomic.cpp  DCDiatomic.h  DCFactory.h  DCFactory.h.orig  DCFreeCycle.cpp  DCFreeCycle.h  DCFreeCycleSeed.cpp  DCFreeCycleSeed.h  DCFreeHedron.cpp  DCFreeHedron.cpp.orig  DCFreeHedron.h  DCFreeHedron.h.orig  DCFreeHedronSeed.cpp  DCFreeHedronSeed.cpp.orig  DCFreeHedronSeed.h  DCFreeHedronSeed.h.orig  DCGraph.cpp  DCGraph.cpp.orig  DCGraph.h  DCGraph.h.orig  DCHedron.cpp  DCHedron.cpp.orig  DCHedron.h  DCHedron.h.orig  DCHedronCycle.cpp  DCHedronCycle.h  DCLinear.cpp  DCLinear.cpp.orig  DCLinear.h  DCLinear.h.orig  (+30 more)
src/cbmc/.svn/: all-wcprops  entries
src/cbmc/.svn/text-base/: DCComponent.h.svn-base  DCData.h.svn-base  DCDiatomic.cpp.svn-base  DCDiatomic.h.svn-base  DCFreeHedron.cpp.svn-base  DCFreeHedron.h.svn-base  DCGraph.cpp.svn-base  DCGraph.h.svn-base  DCLinear.cpp.svn-base  DCLink.cpp.svn-base  DCLink.h.svn-base  DCLinkNoDih.cpp.svn-base  DCLinkNoDih.h.svn-base  DCLinkedHedron.cpp.svn-base  DCLinkedHedron.h.svn-base  DCOnSphere.cpp.svn-base  DCSingle.cpp.svn-base  TrialMol.h.svn-base
src/moves/: CFCMC.h  CrankShaft.h  IntraMoleculeExchange1.h  IntraMoleculeExchange1.h.orig  IntraMoleculeExchange2.h  IntraMoleculeExchange3.h  IntraSwap.h  IntraTargetedSwap.h  MayerFunction.h  MoleculeExchange1.h  MoleculeExchange2.h  MoleculeExchange2Liq.h  MoleculeExchange3.h  MoleculeExchange3Liq.h  MoleculeTransfer.h  MoveBase.h  MultiParticle.h  MultiParticleBrownianMotion.h  NeMTMC.h  ParallelTempering.h  Regrowth.h  Rotation.h  TargetedSwap.h  Translate.h  VolumeTransfer.h
test/: BuildCPUTests.cmake  BuildGPUTests.cmake  CMakeLists.txt.in  FileList.cmake  GoogleTest.cmake  README.md  Run_Examples.py  Setup_Examples.sh  WriteLog.py  runIntTests.sh  runUnitTests.sh
test/input/: BOX_0.psf  BOX_1.psf  GOMC_GEMC.conf  GOMC_Test  GOMC_water_FF.inp  Output_data_BOX_0_restart.coor  Output_data_BOX_0_restart.psf  Output_data_BOX_0_restart.xsc  Output_data_BOX_1_restart.coor  Output_data_BOX_1_restart.psf  Output_data_BOX_1_restart.xsc  Output_data_merged.psf
test/src/: 50StepEnergyTest.cpp  50StepTrajectoryTest.cpp  BasicTypesTest.cpp  BitLibTest.cpp  CPUSideOutputTest.cpp  CalcEnergyTest.cpp  CellListGPUTest.cpp  CheckpointTest.cpp  CircuitTester.cpp  ConsistentTrajectoryTest.cpp  DisplacementMove.cpp  EndianTest.cpp  (+7 more)
(+231 files in other folders)
